--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="com.pythonanywhere.healingpathfoundationhp"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="com.pythonanywhere.healingpathfoundationhp.MainActivity"
                   android:label="@string/app_name">
@@ -10,9 +11,9 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name="com.pythonanywhere.healingpathfoundationhp.MeetingActivity"></activity>
-        <activity android:name="com.pythonanywhere.healingpathfoundationhp.TwelveStepsActivity"></activity>
+        </activity>        
+        <activity android:name="com.facebook.LoginActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar" android:label="@string/facebook_app_id"></activity>
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>   
     </application>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
