--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="com.pythonanywhere.healingpathfoundationhp.MainActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
