--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,4 +19,5 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-sdk android:targetSdkVersion="17" android:maxSdkVersion="17" android:minSdkVersion="4"/>
 </manifest>
