--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.0">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="com.wordpress.jftreading.MainActivity"
+        <activity android:name="com.wordpress.jftreading.MainFragmentActivity"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
