--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.wordpress.jftreading"
       android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName="v1.0">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="com.wordpress.jftreading.MainFragmentActivity"
